- improvements - scrapper added - openapi doc added